# stickies-notes

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
installers/: StickiesNotes.iss  install_linux.sh  install_windows.ps1
src/stickies_notes/: __init__.py  __main__.py  backend.py  config.py  ipc.py  kwin.py  manager.py  note.py  single_instance.py  tray.py
