[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stickies-notes"
version = "1.2.0"
description = "Notas adhesivas ancladas a ventanas individuales, con archivado automático al cerrar la ventana."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "César Bermúdez Rodríguez" }]
keywords = ["sticky-notes", "notes", "windows", "x11", "desktop", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

# Dependencias condicionadas por plataforma: en Linux no existe pywin32 y
# `keyboard` exigiría root, así que cada SO instala solo lo suyo.
dependencies = [
    "pywin32; sys_platform == 'win32'",
    "keyboard; sys_platform == 'win32'",
    "python-xlib; sys_platform == 'linux'",
    "pynput; sys_platform == 'linux'",
    # Icono de bandeja. En Linux puede no haber bandeja disponible; la app lo
    # detecta y sigue sin icono en vez de fallar (ver tray.TrayIcon.start).
    "pystray",
    "pillow",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.urls]
Homepage = "https://github.com/osstsawi/stickies-notes"
Issues = "https://github.com/osstsawi/stickies-notes/issues"

[project.gui-scripts]
stickies-notes = "stickies_notes.manager:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
